# zoo

./: README.md
bazel/: README.md
concurrency/tbb_simple/: CMakeLists.txt
concurrency/tbb_simple/unit_tests/: CMakeLists.txt
concurrency/tbb_simple/unit_tests/engine/: parallel_algorithm_test.cpp  task_test.cpp
database/skiplist/: README.md
docker/docker-compose-rails/: Dockerfile  docker-compose.yml
golang/httptest_sample/: person.go  person_test.go
graph/graph_partition/: dinic.cpp  ford_fulkerson.cpp  graph.csv
hadoop/wordcount/: README.md
json/: simplereader.cpp
k8s/deep-understand-k8s/: experiment_07092020.md  nginx-deployment.yaml  test.yaml
map-matching/hmm/: hmm.py  test.py  test_python_slicing.py
mining-massive-datasets/bayes/: naiveBayesDensityFunctionTrainingSolution.py
mining-massive-datasets/cluster/: kmeansPlusPlus.py
mining-massive-datasets/distance/: cosineSimilarity.py
monad/: monald_test.cpp  monald_test.hs
osm/join2table/: main.go  metadata.csv  strength_sets.csv  target.csv
osm/osrm_facade/: compile.sh  test_inheritance.cpp  test_inheritance.s  test_template.s
osm/pbf-parser-go/: main.go
spatial-index/: geohash.go  globalmaptiles.py  latlon-geohash.js  morton.cpp
spatial-index/geohash/: geohash.go
stacktrace/: stacktrace.cpp  stacktrace.h
tech-summary/: c++11-notes.md  c++tools.md
tech-summary/books/: the_inevitable.md
tech-summary/github/: work_with_opensource.md
tech-summary/lectures/: autonomous_vehicles_analysis.md  human+machine_learning.md  interview_c++.md
tech-summary/papers/: raft.md
(+47 files in other folders)
